<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ConexaoBluetooth</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_graphic">GraphicActivity</string>
    <string name="title_activity_graph_view">GraphView</string>
    <string name="title_activity_rpm">RPM</string>
    <string name="title_activity_cars">Lista de Veículos</string>
    <string name="title_activity_detalhe_carro
activity_detalhe_carro
activity_detalhe_carro
activity_car_detail">Detalhe do Carro</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_liquid_temperature">Temp do Liquido Refrigerador</string>
    <string name="title_activity_detalhe_carro
activity_detalhe_carro
activity_detalhe_carro
activity_obd_list">Dados Reais</string>
    <string name="title_activity_detalhe_carro
activity_detalhe_carro
activity_detalhe_carro
activity_intake_air_temperature">Temp do Ar Admissao</string>
    <string name="title_activity_detalhe_carro
activity_detalhe_carro
activity_detalhe_carro
activity_fuel_pressure">Pressao do Combustivel</string>
    <string name="title_activity_status_adapter">Estado do Adaptador</string>
    <string name="title_activity_bluetooth_main">Coenexão</string>
    <string name="title_activity_status_adapter2">StatusAdapter2</string>
    <string name="title_activity_trouble_codes">Códigos de Falha</string>
    <string name="title_activity_detalhe_carro
activity_detalhe_carro
activity_detalhe_carro
activity_intake_collector_pressure">IntakeCollectorPressureActivity</string>
    <string name="title_activity_battery_voltage">BatteryVoltageActivity</string>
    <string name="title_activity_detalhe_carro
activity_detalhe_carro
activity_detalhe_carro
activity_report">ReportActivity</string>
    <string name="title_activity_detalhe_carro
activity_detalhe_carro
activity_detalhe_carro
activity_report_list">ReportListActivity</string>
    <string name="title_activity_detalhe_carro
activity_detalhe_carro
activity_detalhe_carro
activity_show_report">ShowReportActivity</string>
    <string name="text_rpm_max">Máxima do RPM:</string>
    <string name="text_rpm_min">Mínima do RPM</string>
    <string name="text_max_press_col">Máxima da pressão do coletor ad:</string>
    <string name="text_press_col_min">Mínima da pressão do coletor ad:</string>
    <string name="text_press_comb_max">Máxima presssão do Combustivel:</string>
    <string name="text_press_comb_min">Mínima pressão do Combustivel:</string>
    <string name="text_temp_ar_max">Máxima temperatura do ar:</string>
    <string name="text_temp_ar_min">Mínima temperatura do ar:</string>
    <string name="text_temp_liq_max">Máxima temperatura do radiador:</string>
    <string name="text_temp_liq_min">Mínima temperatura do radiador:</string>

</resources>
